@@ -200,48 +200,37 @@ public record RuleGrammarGenerator(Definition baseK) {
   }
 
   /* use this overload if you don't need to profile rule parse times. */
-  public static ParseInModule getCombinedGrammar(Module mod, boolean strict, FileUtil files) {
-    return getCombinedGrammar(mod, strict, false, false, false, files, null, false);
+  public static ParseInModule getCombinedGrammar(Module mod, FileUtil files) {
+    return getCombinedGrammar(mod, false, false, false, files, null, false);
   }
 
   public static ParseInModule getCombinedGrammar(
-      Module mod, boolean strict, FileUtil files, boolean partialParseDebug) {
-    return getCombinedGrammar(mod, strict, false, false, false, files, null, partialParseDebug);
+      Module mod, FileUtil files, boolean partialParseDebug) {
+    return getCombinedGrammar(mod, false, false, false, files, null, partialParseDebug);
+  }
+
+  public static ParseInModule getCombinedGrammar(Module mod, boolean timing, FileUtil files) {
+    return getCombinedGrammar(mod, timing, false, false, files, null, false);
   }
 
   public static ParseInModule getCombinedGrammar(
-      Module mod, boolean strict, boolean timing, FileUtil files) {
-    return getCombinedGrammar(mod, strict, timing, false, false, files, null, false);
+      Module mod, boolean timing, FileUtil files, String debugTypeInference) {
+    return getCombinedGrammar(mod, timing, false, false, files, debugTypeInference, false);
   }
 
   public static ParseInModule getCombinedGrammar(
-      Module mod, boolean strict, boolean timing, FileUtil files, String debugTypeInference) {
-    return getCombinedGrammar(mod, strict, timing, false, false, files, debugTypeInference, false);
+      Module mod, boolean timing, boolean isBison, FileUtil files) {
+    return getCombinedGrammar(mod, timing, isBison, false, files, null, false);
   }
 
   public static ParseInModule getCombinedGrammar(
-      Module mod, boolean strict, boolean timing, boolean isBison, FileUtil files) {
-    return getCombinedGrammar(mod, strict, timing, isBison, false, files, null, false);
+      Module mod, boolean timing, boolean isBison, boolean forGlobalScanner, FileUtil files) {
+    return getCombinedGrammar(mod, timing, isBison, forGlobalScanner, files, null, false);
   }
 
   public static ParseInModule getCombinedGrammar(
-      Module mod,
-      boolean strict,
-      boolean timing,
-      boolean isBison,
-      boolean forGlobalScanner,
-      FileUtil files) {
-    return getCombinedGrammar(mod, strict, timing, isBison, forGlobalScanner, files, null, false);
-  }
-
-  public static ParseInModule getCombinedGrammar(
-      Module mod,
-      Scanner scanner,
-      boolean strict,
-      boolean timing,
-      boolean isBison,
-      FileUtil files) {
-    return getCombinedGrammar(mod, scanner, strict, timing, isBison, files, null, false);
+      Module mod, Scanner scanner, boolean timing, boolean isBison, FileUtil files) {
+    return getCombinedGrammar(mod, scanner, timing, isBison, files, null, false);
   }
 
   // the forGlobalScanner flag tells the ParseInModule class not to exclude
@@ -264,7 +253,6 @@ public record RuleGrammarGenerator(Definition baseK) {
    */
   public static ParseInModule getCombinedGrammar(
       Module mod,
-      boolean strict,
       boolean timing,
       boolean isBison,
       boolean forGlobalScanner,
@@ -272,27 +260,19 @@ public record RuleGrammarGenerator(Definition baseK) {
       String debugTypeInference,
       boolean partialParseDebug) {
     return new ParseInModule(
-        mod,
-        strict,
-        timing,
-        isBison,
-        forGlobalScanner,
-        files,
-        debugTypeInference,
-        partialParseDebug);
+        mod, timing, isBison, forGlobalScanner, files, debugTypeInference, partialParseDebug);
   }
 
   public static ParseInModule getCombinedGrammar(
       Module mod,
       Scanner scanner,
-      boolean strict,
       boolean timing,
       boolean isBison,
       FileUtil files,
       String debugTypeInference,
       boolean partialParseDebug) {
     return new ParseInModule(
-        mod, scanner, strict, timing, isBison, false, files, debugTypeInference, partialParseDebug);
+        mod, scanner, timing, isBison, false, files, debugTypeInference, partialParseDebug);
   }
 
   public static Tuple3<Module, Module, Module> getCombinedGrammarImpl(
@@ -375,7 +355,7 @@ public record RuleGrammarGenerator(Definition baseK) {
     List<Sort> allSorts =
         stream(mod.allSorts())
             .filter(s -> (!isParserSort(s) || s.equals(Sorts.KItem()) || s.equals(Sorts.K())))
-            .collect(Collectors.toList());
+            .toList();
     for (SortHead sh : mutable(mod.definedInstantiations()).keySet()) {
       for (Sort s : mutable(mod.definedInstantiations().apply(sh))) {
         // syntax MInt{K} ::= MInt{6}
@@ -583,18 +563,20 @@ public record RuleGrammarGenerator(Definition baseK) {
               .collect(Collectors.toSet());
     }
 
-    disambProds = parseProds.stream().collect(Collectors.toSet());
+    disambProds = new HashSet<>(parseProds);
     if (mod.importedModuleNames().contains(PROGRAM_LISTS)) {
       Set<Sentence> prods3 = new HashSet<>();
       // if no start symbol has been defined in the configuration, then use K
       for (Sort srt : iterable(mod.allSorts())) {
         if (!isParserSort(srt) && !mod.listSorts().contains(srt)) {
-          // K ::= Sort
+          // KItem ::= Sort
           prods3.add(Production(Seq(), Sorts.KItem(), Seq(NonTerminal(srt)), Att()));
         }
       }
+      // Add KItem subsorts to disambiguation for use by sort inference
+      disambProds.addAll(prods3);
       // for each triple, generate a new pattern which works better for parsing lists in programs.
-      prods3.addAll(parseProds.stream().collect(Collectors.toSet()));
+      prods3.addAll(new HashSet<>(parseProds));
       Set<Sentence> res = new HashSet<>();
       for (UserList ul : UserList.getLists(prods3)) {
         Production prod1, prod2, prod3 = null, prod4 = null, prod5 = null;
@@ -714,7 +696,7 @@ public record RuleGrammarGenerator(Definition baseK) {
         stream(mod.importedModules())
             .filter(m -> m.att().contains(Att.NOT_LR1()))
             .map(Module::name)
-            .collect(Collectors.toList());
+            .toList();
     if (!notLrModules.isEmpty()) {
       att = att.add(Att.NOT_LR1_MODULES(), notLrModules.toString());
     }
